Accordion Fixed + Horizontal Scroll + Works Props

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -104,7 +104,7 @@ footer{
 }
 .container{
     width: 100%;
-    padding: 0 10%;
+    padding: 0 7vw;
     display: grid;
     grid-auto-flow: row;
     justify-items: center;
@@ -463,7 +463,7 @@ footer{
 }
 @media (max-width: 1480px) {
     .container {
-        padding: 0 2%;
+        padding: 0 2vw;
     }
 }
 @media (max-width: 1280px) {
@@ -517,7 +517,7 @@ footer{
 
 @media (max-width: 576px) {
     .container {
-        padding: 0 3.5%;
+        padding: 0 3.5vw;
     }
 
     .modal__container {
